--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,14 @@
-<h3>Hello!</h3>
+<div class="container">
+
+  <div class="form-group">
+    <label for="exampleFormControlSelect1"></label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>家居物業</option>
+      <option>交通出行</option>
+      <option>休閒娛樂</option>
+      <option>餐飲食品</option>
+      <option>其他</option>
+    </select>
+  </div>
+
+</div>
