feat: add function

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,6 +40,11 @@
         </li>
         {{/each}}
       </ul>
+
+      <div class="row justify-content-center mb-5">
+        <a href="./new" class="btn btn-dark">新增支出</a>
+      </div>
+
     </div>
   </div>
 </div>
