--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
 
             <div class="col-2">
               <div class="row justify-content-around">
-                <form action="./expense/{{this._id}}?_method=DELETE" method="POST">
+                <form action="./expense/{{this._id}}/delete" method="POST">
                   <button type="submit" class="btn">
                     <i class="fa fa-trash" aria-hidden="true"></i>
                   </button>
