--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -5,7 +5,7 @@
         <div class="card-body">
           <h4 class="card-title text-center"><i class="fa fa-plus" aria-hidden="true"></i> 請輸入你的支出</h4>
           <hr>
-          <form action="/expense/{{record._id}}/edit" method="POST">
+          <form action="/expense/{{record._id}}?_method=PUT" method="POST">
 
 
             <div class="form-group row">
