add schemas+total function

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,6 +12,9 @@
         </select>
       </form>
 
+      <h5>總金額</h5>
+      <h3>{{totalAmount}}</h3>
+
 
       <ul class="list-group my-5">
         {{#each records}}
