--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -3,7 +3,7 @@
     <div class="col-sm-12 col-xl-6 mx-auto">
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title text-center"><i class="fa fa-plus" aria-hidden="true"></i> 請輸入你的支出</h4>
+          <h4 class="card-title text-center"><i class="fa fa-plus" aria-hidden="true"></i> 請修改你的支出</h4>
           <hr>
           <form action="/expense/{{record._id}}?_method=PUT" method="POST">
 
@@ -19,12 +19,12 @@
               <label for="category" class="col-sm-2 col-form-label">類別</label>
               <div class=" col-sm-10">
                 <select name="category" class="form-control">
-                  <option selected disabled>Select</option>
-                  <option>家居物業</option>
-                  <option>交通出行</option>
-                  <option>休閒娛樂</option>
-                  <option>餐飲食品</option>
-                  <option>其他</option>
+                  <option disabled>Select</option>
+                  <option value="家居物業" {{#if (eq record.category "家居物業" ) }} selected {{/if}}>家居物業</option>
+                  <option value="交通出行" {{#if (eq record.category "交通出行" ) }} selected {{/if}}>交通出行</option>
+                  <option value="休閒娛樂" {{#if (eq record.category "休閒娛樂" ) }} selected {{/if}}>休閒娛樂</option>
+                  <option value="餐飲食品" {{#if (eq record.category "餐飲食品" ) }} selected {{/if}}>餐飲食品</option>
+                  <option value="其他" {{#if (eq record.category "其他" ) }} selected {{/if}}>其他</option>
                 </select>
               </div>
             </div>
