--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,41 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-sm-8 ">
+    <div class="col-sm-7 ">
 
       <form action="./filter" method="POST" class="my-3">
         <select class="form-control" id="exampleFormControlSelect1" name="filter" onChange="javascript:submit()">
-          <option selected disabled>Select</option>
-          <option>家居物業</option>
-          <option>交通出行</option>
-          <option>休閒娛樂</option>
-          <option>餐飲食品</option>
-          <option>其他</option>
+          <option disabled {{#if (eq selectCategory "All" ) }} selected {{/if}}>All</option>
+          <option value="家居物業" {{#if (eq selectCategory "家居物業" ) }} selected {{/if}}>家居物業</option>
+          <option value="交通出行" {{#if (eq selectCategory "交通出行" ) }} selected {{/if}}>交通出行</option>
+          <option value="休閒娛樂" {{#if (eq selectCategory "休閒娛樂" ) }} selected {{/if}}>休閒娛樂</option>
+          <option value="餐飲食品" {{#if (eq selectCategory "餐飲食品" ) }} selected {{/if}}>餐飲食品</option>
+          <option value="其他" {{#if (eq selectCategory "其他" ) }} selected {{/if}}>其他</option>
         </select>
       </form>
 
+
       <h5>總金額</h5>
-      <h3>{{totalAmount}}</h3>
+      <div class="row justify-content-center">
+        <h2>{{totalAmount}}</h2>
+      </div>
 
 
-      <ul class="list-group my-5">
+      <ul class="list-group my-3">
         {{#each records}}
         <li class="list-group-item">
           <div class="row justify-content-between">
             <div class="col-4">
-              {{this.name}}
+              {{this.name}}<br>
+              <small>{{this.date}}</small>
+            </div>
+
+            <div class="col-4">
+              {{this.amount}}
             </div>
 
             <div class="col-2">
               <div class="row justify-content-around">
-                <form action="./expense/{{this._id}}?_method=DELETE" method="POST">
+                <form action="./expense/{{this._id}}?_method=DELETE" method="POST" onsubmit="return confirm('確定要刪除嗎？')">
                   <button type="submit" class="btn">
                     <i class="fa fa-trash" aria-hidden="true"></i>
                   </button>
