refact: modles & feat: add all selection

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 
       <form action="./filter" method="POST" class="my-3">
         <select class="form-control" id="exampleFormControlSelect1" name="filter" onChange="javascript:submit()">
-          <option value="All" disabled {{#if (eq selectCategory "All" ) }} selected {{/if}}>全部支出</option>
+          <option value="All" {{#if (eq selectCategory "All" ) }} selected {{/if}}>全部支出</option>
           <option value="家居物業" {{#if (eq selectCategory "家居物業" ) }} selected {{/if}}>家居物業</option>
           <option value="交通出行" {{#if (eq selectCategory "交通出行" ) }} selected {{/if}}>交通出行</option>
           <option value="休閒娛樂" {{#if (eq selectCategory "休閒娛樂" ) }} selected {{/if}}>休閒娛樂</option>
