feat: add flash message

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
   <div class="col-md-4 m-auto">
     <div class="card card-body">
       <h1 class="text-center my-3">Login</h1>
-
+      {{>message}}
       <form action="/users/login" method="POST">
         <div class="form-group">
           <label for="email">Email</label>
