--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,6 +2,7 @@
   <div class="col-md-4 m-auto">
     <div class="card card-body">
       <h1 class="text-center my-3">Register</h1>
+      {{>message}}
       <form action="/users/register" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
