--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -8,10 +8,18 @@
           <form action="/expense/{{record._id}}?_method=PUT" method="POST">
 
 
+
             <div class="form-group row">
               <label for="name" class="col-sm-2 col-form-label">名稱</label>
               <div class=" col-sm-10">
                 <input type="text" class="form-control" name="name" placeholder="" value="{{record.name}}">
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label for="date" class="col-sm-2 col-form-label">日期</label>
+              <div class=" col-sm-10">
+                <input type="date" name="date" class="form-control" value="{{record.date}}">
               </div>
             </div>
 
@@ -30,6 +38,13 @@
             </div>
 
             <div class="form-group row">
+              <label for="merchant" class="col-sm-2 col-form-label">商家</label>
+              <div class=" col-sm-10">
+                <input type="text" class="form-control" name="merchant" placeholder="" value="{{record.merchant}}">
+              </div>
+            </div>
+
+            <div class="form-group row">
               <label for="rating" class="col-sm-2 col-form-label">金額</label>
               <div class=" col-sm-10">
                 <input type="number" class="form-control" name="amount" placeholder="" value="{{record.amount}}">
@@ -37,12 +52,7 @@
             </div>
 
 
-            <div class="form-group row">
-              <label for="date" class="col-sm-2 col-form-label">日期</label>
-              <div class=" col-sm-10">
-                <input type="date" name="date" class="form-control" value="{{record.date}}">
-              </div>
-            </div>
+
 
             <div class=" text-center mt-5">
               <button type="submit" class="btn btn-dark">Save</button>
