--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -8,6 +8,7 @@
           <form action="/expense" method="POST">
 
 
+
             <div class="form-group row">
               <label for="name" class="col-sm-2 col-form-label">名稱</label>
               <div class=" col-sm-10">
@@ -21,6 +22,7 @@
                 <input type="date" name="date" class="form-control" value="2021-02-22">
               </div>
             </div>
+
 
             <div class="form-group row">
               <label for="category" class="col-sm-2 col-form-label">類別</label>
@@ -37,7 +39,14 @@
             </div>
 
             <div class="form-group row">
-              <label for="rating" class="col-sm-2 col-form-label">金額</label>
+              <label for="merchant" class="col-sm-2 col-form-label">商家</label>
+              <div class=" col-sm-10">
+                <input type="text" class="form-control" name="merchant" placeholder="">
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label for="amount" class="col-sm-2 col-form-label">金額</label>
               <div class=" col-sm-10">
                 <input type="number" class="form-control" name="amount" placeholder="">
               </div>
