feat: add filter by Month into routes/mongodb

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,15 +2,39 @@
   <div class="row justify-content-center">
     <div class="col-sm-7 ">
 
-      <form action="./filter" method="POST" class="my-3">
-        <select class="form-control" id="exampleFormControlSelect1" name="filter" onChange="javascript:submit()">
-          <option value="All" {{#if (eq selectCategory "All" ) }} selected {{/if}}>全部支出</option>
-          <option value="家居物業" {{#if (eq selectCategory "家居物業" ) }} selected {{/if}}>家居物業</option>
-          <option value="交通出行" {{#if (eq selectCategory "交通出行" ) }} selected {{/if}}>交通出行</option>
-          <option value="休閒娛樂" {{#if (eq selectCategory "休閒娛樂" ) }} selected {{/if}}>休閒娛樂</option>
-          <option value="餐飲食品" {{#if (eq selectCategory "餐飲食品" ) }} selected {{/if}}>餐飲食品</option>
-          <option value="其他" {{#if (eq selectCategory "其他" ) }} selected {{/if}}>其他</option>
-        </select>
+      <form action="./filter" method="POST" class="my-3" name="form1">
+        <div class="row mt-5">
+          <div class="col">
+            <select class="form-control" id="exampleFormControlSelect1" name="filterByMon"
+              onChange="javascript:this.form.submit()">
+              <option value="All" {{#if (eq selectMonth "All" ) }} selected {{/if}}>全年</option>
+              <option value="01" {{#if (eq selectMonth "01" ) }} selected {{/if}}>1月</option>
+              <option value="02" {{#if (eq selectMonth "02" ) }} selected {{/if}}>2月</option>
+              <option value="03" {{#if (eq selectMonth "03" ) }} selected {{/if}}>3月</option>
+              <option value="04" {{#if (eq selectMonth "04" ) }} selected {{/if}}>4月</option>
+              <option value="05" {{#if (eq selectMonth "05" ) }} selected {{/if}}>5月</option>
+              <option value="06" {{#if (eq selectMonth "06" ) }} selected {{/if}}>6月</option>
+              <option value="07" {{#if (eq selectMonth "07" ) }} selected {{/if}}>7月</option>
+              <option value="08" {{#if (eq selectMonth "08" ) }} selected {{/if}}>8月</option>
+              <option value="09" {{#if (eq selectMonth "09" ) }} selected {{/if}}>9月</option>
+              <option value="10" {{#if (eq selectMonth "10" ) }} selected {{/if}}>10月</option>
+              <option value="11" {{#if (eq selectMonth "11" ) }} selected {{/if}}>11月</option>
+              <option value="12" {{#if (eq selectMonth "12" ) }} selected {{/if}}>12月</option>
+            </select>
+          </div>
+          <div class="col">
+            <select class="form-control" id="exampleFormControlSelect1" name="filter"
+              onChange="javascript:this.form.submit()">
+              <option value="All" {{#if (eq selectCategory "All" ) }} selected {{/if}}>全部支出</option>
+              <option value="家居物業" {{#if (eq selectCategory "家居物業" ) }} selected {{/if}}>家居物業</option>
+              <option value="交通出行" {{#if (eq selectCategory "交通出行" ) }} selected {{/if}}>交通出行</option>
+              <option value="休閒娛樂" {{#if (eq selectCategory "休閒娛樂" ) }} selected {{/if}}>休閒娛樂</option>
+              <option value="餐飲食品" {{#if (eq selectCategory "餐飲食品" ) }} selected {{/if}}>餐飲食品</option>
+              <option value="其他" {{#if (eq selectCategory "其他" ) }} selected {{/if}}>其他</option>
+            </select>
+          </div>
+        </div>
+        <noscript><input type="submit" value="Submit"></noscript>
       </form>
 
 
