--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -10,23 +10,25 @@
 
 
             <div class="form-group row">
-              <label for="name" class="col-sm-2 col-form-label">名稱</label>
+              <label for="name" class="col-sm-2 col-form-label">名稱*</label>
               <div class=" col-sm-10">
-                <input type="text" class="form-control" name="name" placeholder="" value="{{record.name}}">
+                <input type="text" class="form-control" name="name" placeholder="" value="{{record.name}}"
+                  maxlength="10" required>
+                <small id="nameReminder" class="form-text text-muted">字數上限10字</small>
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="date" class="col-sm-2 col-form-label">日期</label>
+              <label for="date" class="col-sm-2 col-form-label">日期*</label>
               <div class=" col-sm-10">
-                <input type="date" name="date" class="form-control" value="{{record.date}}">
+                <input type="date" name="date" class="form-control" value="{{record.date}}" required>
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="category" class="col-sm-2 col-form-label">類別</label>
+              <label for="category" class="col-sm-2 col-form-label">類別*</label>
               <div class=" col-sm-10">
-                <select name="category" class="form-control">
+                <select name="category" class="form-control" required>
                   <option disabled>Select</option>
                   <option value="家居物業" {{#if (eq record.category "家居物業" ) }} selected {{/if}}>家居物業</option>
                   <option value="交通出行" {{#if (eq record.category "交通出行" ) }} selected {{/if}}>交通出行</option>
@@ -40,14 +42,17 @@
             <div class="form-group row">
               <label for="merchant" class="col-sm-2 col-form-label">商家</label>
               <div class=" col-sm-10">
-                <input type="text" class="form-control" name="merchant" placeholder="" value="{{record.merchant}}">
+                <input type="text" class="form-control" name="merchant" placeholder="" value="{{record.merchant}}"
+                  maxlength="10">
+                <small id="merchantReminder" class="form-text text-muted">字數上限10字</small>
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="rating" class="col-sm-2 col-form-label">金額</label>
+              <label for="rating" class="col-sm-2 col-form-label">金額*</label>
               <div class=" col-sm-10">
-                <input type="number" class="form-control" name="amount" placeholder="" value="{{record.amount}}">
+                <input type="number" class="form-control" name="amount" placeholder="" value="{{record.amount}}" min="0"
+                  required>
               </div>
             </div>
 
