--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -4,30 +4,32 @@
       <div class="card">
         <div class="card-body">
           <h4 class="card-title text-center"><i class="fa fa-plus" aria-hidden="true"></i> 請輸入你的支出</h4>
+          <p>* 必填欄位</p>
           <hr>
           <form action="/expense" method="POST">
 
 
 
             <div class="form-group row">
-              <label for="name" class="col-sm-2 col-form-label">名稱</label>
+              <label for="name" class="col-sm-2 col-form-label">名稱*</label>
               <div class=" col-sm-10">
-                <input type="text" class="form-control" name="name" placeholder="">
+                <input type="text" class="form-control" name="name" placeholder="" maxlength="10" required>
+                <small id="nameReminder" class="form-text text-muted">字數上限10字</small>
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="date" class="col-sm-2 col-form-label">日期</label>
+              <label for="date" class="col-sm-2 col-form-label">日期*</label>
               <div class=" col-sm-10">
-                <input type="date" name="date" class="form-control" value="2021-02-22">
+                <input type="date" name="date" class="form-control" value="2021-02-22" required>
               </div>
             </div>
 
 
             <div class="form-group row">
-              <label for="category" class="col-sm-2 col-form-label">類別</label>
+              <label for="category" class="col-sm-2 col-form-label">類別*</label>
               <div class=" col-sm-10">
-                <select name="category" class="form-control">
+                <select name="category" class="form-control" required>
                   <option selected disabled>Select</option>
                   <option value="家居物業">家居物業</option>
                   <option value="交通出行">交通出行</option>
@@ -41,14 +43,15 @@
             <div class="form-group row">
               <label for="merchant" class="col-sm-2 col-form-label">商家</label>
               <div class=" col-sm-10">
-                <input type="text" class="form-control" name="merchant" placeholder="">
+                <input type="text" class="form-control" name="merchant" placeholder="" maxlength="10">
+                <small id="merchantReminder" class="form-text text-muted">字數上限10字</small>
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="amount" class="col-sm-2 col-form-label">金額</label>
+              <label for="amount" class="col-sm-2 col-form-label">金額*</label>
               <div class=" col-sm-10">
-                <input type="number" class="form-control" name="amount" placeholder="">
+                <input type="number" class="form-control" name="amount" placeholder="" min="0" required>
               </div>
             </div>
 
