refact: combine filter.js and home.js together

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-sm-7 ">
 
-      <form action="./filter" method="POST" class="my-3" name="form1">
+      <form action="/" method="GET" class="my-3" name="form1">
         <div class="row mt-5">
           <div class="col">
             <select class="form-control" id="exampleFormControlSelect1" name="filterByMon"
